src/github.com/ebay/akutan/query/parser/testdata/legacy/errors/entity_chars_subject.res
Query:
BOB123 ?p ?o

Parsed:
Error: unable to parse query: line 1 column 7: expected :
